--- a/guide/index.html
+++ b/guide/index.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 	<title>Making Bots with Discord.js</title>
-	<link rel="stylesheet" media="screen" href="css/docute.css" />
-	<link rel="stylesheet" media="screen" href="css/main.css" />
+	<link rel="stylesheet" media="screen" href="assets/css/docute.css" />
+	<link rel="stylesheet" media="screen" href="assets/css/main.css" />
 </head>
 <body>
 	<div id="app"></div>
-	<script src="js/docute.js"></script>
-	<script src="js/main.js"></script>
+	<script src="assets/js/docute.js"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
