Finished "adding more commands" page
- Also added the "diff" lang file cuz it's kinda useful
- Slightly updated the contributing.md file
- Changed some CSS around
- Added a thing to the to-do list

--- a/guide/index.html
+++ b/guide/index.html
@@ -11,6 +11,7 @@
 <body>
 	<div id="app"></div>
 	<script src="assets/js/docute.js"></script>
+	<script src="assets/js/prism-diff.min.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 </html>
