--- a/guide/index.html
+++ b/guide/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-	<title>Document</title>
+	<title>Making Bots with Discord.js</title>
 	<link rel="stylesheet" href="../assets/css/themes/vue.css">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
