--- a/guide/index.html
+++ b/guide/index.html
@@ -5,14 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<title>Making Bots with Discord.js</title>
-	<link rel="stylesheet" href="../assets/css/themes/vue.css">
-	<link rel="stylesheet" href="../assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/themes/vue.css" />
+	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
 	<div id="app"></div>
-	<script src="../assets/js/main.js"></script>
-	<script src="../assets/js/docsify.min.js"></script>
-	<script src="../assets/js/prism-diff.min.js"></script>
-	<script src="../assets/js/prism-json.min.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/docsify.min.js"></script>
+	<script src="assets/js/prism-diff.min.js"></script>
+	<script src="assets/js/prism-json.min.js"></script>
 </body>
 </html>
