--- a/guide/index.html
+++ b/guide/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+	<meta name="description" content="A guide made by the community of discord.js for its users." />
+	<meta name="theme-color" content="#42b983" />
 	<title>Making Bots with Discord.js</title>
 	<link rel="stylesheet" href="assets/css/themes/vue.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,7 +14,9 @@
 	<div id="app"></div>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/docsify.min.js"></script>
-	<script src="assets/js/prism-diff.min.js"></script>
-	<script src="assets/js/prism-json.min.js"></script>
+	<script src="assets/js/plugins/search.min.js"></script>
+	<script src="assets/js/plugins/ga.min.js"></script>
+	<script src="assets/js/plugins/prism-diff.min.js"></script>
+	<script src="assets/js/plugins/prism-json.min.js"></script>
 </body>
 </html>
