Replace codeblocks font

--- a/guide/index.html
+++ b/guide/index.html
@@ -7,8 +7,9 @@
 	<meta name="description" content="A guide made by the community of discord.js for its users." />
 	<meta name="theme-color" content="#42b983" />
 	<title>Making Bots with Discord.js</title>
-	<link rel="stylesheet" href="assets/css/themes/vue.css" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" />
+	<link href="assets/css/themes/vue.css" rel="stylesheet" />
+	<link href="assets/css/main.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="app"></div>
