--- a/guide/index.html
+++ b/guide/index.html
@@ -6,7 +6,13 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<meta name="description" content="A guide made by the community of discord.js for its users." />
 	<meta name="theme-color" content="#42b983" />
+
+	<meta property="og:title" content="Making Bots with Discord.js" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://discordjs.guide" />
+
 	<title>Making Bots with Discord.js</title>
+
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" />
 	<link href="assets/css/themes/vue.css" rel="stylesheet" />
 	<link href="assets/css/main.css" rel="stylesheet" />
