--- a/guide/index.html
+++ b/guide/index.html
@@ -8,6 +8,7 @@
 	<meta name="theme-color" content="#42b983" />
 
 	<meta property="og:title" content="Making Bots with Discord.js" />
+	<meta property="og:description" content="A guide made by the community of discord.js for its users." />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://discordjs.guide" />
 
