add some more stuff

--- a/guide/index.html
+++ b/guide/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<meta name="description" content="A guide made by the community of discord.js for its users." />
 	<meta name="theme-color" content="#42b983" />
-
+	<meta name="twitter:card" content="summary" />
 	<meta property="og:title" content="Making Bots with Discord.js" />
 	<meta property="og:description" content="A guide made by the community of discord.js for its users." />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://discordjs.guide" />
-
+	<meta property="og:url" content="http://discordjs.guide/" />
+	<meta property="og:locale" content="en_US" />
 	<title>Making Bots with Discord.js</title>
-
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" />
 	<link href="assets/css/themes/vue.css" rel="stylesheet" />
 	<link href="assets/css/main.css" rel="stylesheet" />
