Add dark theme support

--- a/guide/index.html
+++ b/guide/index.html
@@ -10,17 +10,20 @@
 	<meta property="og:title" content="Making Bots with Discord.js" />
 	<meta property="og:description" content="A guide made by the community of discord.js for its users." />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://discordjs.guide/" />
+	<meta property="og:url" content="https://discordjs.guide/" />
 	<meta property="og:locale" content="en_US" />
 	<title>Making Bots with Discord.js</title>
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" />
+	<link href="https://file.myfontastic.com/AsezBccA5Kw5XYcQGSS5GY/icons.css" rel="stylesheet" />
 	<link href="assets/css/themes/vue.css" rel="stylesheet" />
 	<link href="assets/css/main.css" rel="stylesheet" />
+	<link id="dark-theme-css" href="assets/css/dark.css" rel="stylesheet" disabled />
 </head>
 <body>
 	<div id="app"></div>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/docsify.min.js"></script>
+	<script src="assets/js/dark-theme.js"></script>
 	<script src="assets/js/plugins/ga.min.js"></script>
 	<script src="assets/js/plugins/prism-diff.min.js"></script>
 	<script src="assets/js/plugins/prism-json.min.js"></script>
