Restructure HTML because of browser support
The last few commits wouldn't work on latest Firefox, due to child click
event listeners because interrupted if inside a `<button>` tag.

--- a/guide/index.html
+++ b/guide/index.html
@@ -17,7 +17,7 @@
 	<link href="https://file.myfontastic.com/AsezBccA5Kw5XYcQGSS5GY/icons.css" rel="stylesheet" />
 	<link href="assets/css/themes/vue.css" rel="stylesheet" />
 	<link href="assets/css/main.css" rel="stylesheet" />
-	<link id="dark-theme-css" href="assets/css/dark.css" rel="stylesheet" disabled />
+	<link href="assets/css/dark.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="app"></div>
