--- a/guide/index.html
+++ b/guide/index.html
@@ -7,12 +7,12 @@
 	<meta name="description" content="A guide made by the community of discord.js for its users." />
 	<meta name="theme-color" content="#42b983" />
 	<meta name="twitter:card" content="summary" />
-	<meta property="og:title" content="Making Bots with Discord.js" />
+	<meta property="og:title" content="Discord.js Guide" />
 	<meta property="og:description" content="A guide made by the community of discord.js for its users." />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://discordjs.guide/" />
 	<meta property="og:locale" content="en_US" />
-	<title>Making Bots with Discord.js</title>
+	<title>Discord.js Guide</title>
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" />
 	<link href="https://file.myfontastic.com/AsezBccA5Kw5XYcQGSS5GY/icons.css" rel="stylesheet" />
 	<link href="assets/css/themes/vue.css" rel="stylesheet" />
