Add missing piece to ESLint page
Also added the prism-bash highlight plugin, because comments would show
up as plain text without it instead of using the proper highlighting.

--- a/guide/index.html
+++ b/guide/index.html
@@ -27,5 +27,6 @@
 	<script src="assets/js/plugins/ga.min.js"></script>
 	<script src="assets/js/plugins/prism-diff.min.js"></script>
 	<script src="assets/js/plugins/prism-json.min.js"></script>
+	<script src="assets/js/plugins/prism-bash.min.js"></script>
 </body>
 </html>
