--- a/guide/index.html
+++ b/guide/index.html
@@ -22,6 +22,7 @@
 <body>
 	<div id="app"></div>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/vue.min.js"></script>
 	<script src="assets/js/docsify.min.js"></script>
 	<script src="assets/js/dark-theme.js"></script>
 	<script src="assets/js/plugins/ga.min.js"></script>
