Rename main script to "init", create new "main" script

--- a/guide/index.html
+++ b/guide/index.html
@@ -21,9 +21,10 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/init.js"></script>
 	<script src="assets/js/vue.min.js"></script>
 	<script src="assets/js/docsify.min.js"></script>
+	<script src="assets/js/main.js"></script>
 	<script src="assets/js/dark-theme.js"></script>
 	<script src="assets/js/plugins/ga.min.js"></script>
 	<script src="assets/js/plugins/prism-diff.min.js"></script>
