Add Discord message(s) components, along with CSS and fonts needed

--- a/guide/index.html
+++ b/guide/index.html
@@ -14,6 +14,7 @@
 	<meta property="og:locale" content="en_US" />
 	<title>Discord.js Guide</title>
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet" />
 	<link href="https://file.myfontastic.com/AsezBccA5Kw5XYcQGSS5GY/icons.css" rel="stylesheet" />
 	<link href="assets/css/themes/vue.css" rel="stylesheet" />
 	<link href="assets/css/main.css" rel="stylesheet" />
