Add a Discord message Vue component (#126)
* Install Vue

* Rename main script to "init", create new "main" script

* Add some default avatars

* Add Discord message(s) components, along with CSS and fonts needed

* Add in the bot tag prop

* Add a section in the CONTRIBUTING.md file in regards to the component

* Update eslintignore file and ignore no-undef in main.js

* Rename the "user" avatar option to "djs"

Makes more sense since it's actually the d.js icon

* Add in a paragraph about avatar shortcuts in the contributing.md file

* Update the to-do list

* Fix merge conflict dumbness

--- a/guide/index.html
+++ b/guide/index.html
@@ -14,6 +14,7 @@
 	<meta property="og:locale" content="en_US" />
 	<title>Discord.js Guide</title>
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet" />
 	<link href="https://file.myfontastic.com/AsezBccA5Kw5XYcQGSS5GY/icons.css" rel="stylesheet" />
 	<link href="assets/css/themes/vue.css" rel="stylesheet" />
 	<link href="assets/css/main.css" rel="stylesheet" />
@@ -21,8 +22,10 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script src="assets/js/main.js"></script>
+	<script src="assets/js/init.js"></script>
+	<script src="assets/js/vue.min.js"></script>
 	<script src="assets/js/docsify.min.js"></script>
+	<script src="assets/js/main.js"></script>
 	<script src="assets/js/dark-theme.js"></script>
 	<script src="assets/js/plugins/ga.min.js"></script>
 	<script src="assets/js/plugins/prism-diff.min.js"></script>
