--- a/guide/index.html
+++ b/guide/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-	<meta name="description" content="A guide made by the community of discord.js for its users." />
+	<meta name="description" content="A discord.js guide made by the community." />
 	<meta name="theme-color" content="#42b983" />
 	<meta name="twitter:card" content="summary" />
 	<meta property="og:title" content="Discord.js Guide" />
-	<meta property="og:description" content="A guide made by the community of discord.js for its users." />
+	<meta property="og:description" content="A discord.js guide made by the community." />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://discordjs.guide/" />
 	<meta property="og:locale" content="en_US" />
