Switch out old Discord message components for external plugin

--- a/guide/index.html
+++ b/guide/index.html
@@ -24,6 +24,7 @@
 	<div id="app"></div>
 	<script src="assets/js/init.js"></script>
 	<script src="assets/js/vue.min.js"></script>
+	<script src="assets/js/plugins/vue-discord-message.min.js"></script>
 	<script src="assets/js/docsify.min.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/dark-theme.js"></script>
