feat(oauth2): Domain change
Co-authored-by: Carter <45381083+Fyko@users.noreply.github.com>

--- a/code-samples/oauth/simple-oauth-webserver/index.html
+++ b/code-samples/oauth/simple-oauth-webserver/index.html
@@ -32,7 +32,7 @@
 				const accessToken = fragment.access_token;
 				const tokenType = fragment.token_type;
 
-				fetch('https://discordapp.com/api/users/@me', {
+				fetch('https://discord.com/api/users/@me', {
 					headers: {
 						authorization: `${tokenType} ${accessToken}`
 					}
