refactor(oauth2): Update images, headers, and grammar

--- a/code-samples/oauth/simple-oauth-webserver/index.html
+++ b/code-samples/oauth/simple-oauth-webserver/index.html
@@ -38,8 +38,8 @@
 
 			fetch('https://discord.com/api/users/@me', {
 				headers: {
-					authorization: `${tokenType} ${accessToken}`
-				}
+					authorization: `${tokenType} ${accessToken}`,
+				},
 			})
 				.then(result => result.json())
 				.then(response => {
