chore(code-samples): add comment to explicitly mention implicit grant flow use

--- a/code-samples/oauth/simple-oauth-webserver/index.html
+++ b/code-samples/oauth/simple-oauth-webserver/index.html
@@ -7,6 +7,7 @@
 	<div id="info">
 		Hoi!
 	</div>
+	<!-- Note: This example uses the implicit grant flow (https://discordjs.guide/oauth2/#implicit-grant-flow), so make sure you use `response_type=token` here -->
 	<a id="login" style="display: none;" href="your-oauth2-URL-here">Identify Yourself</a>
 	<script>
 		function generateRandomString() {
